[project]
name = "rss-digger"
version = "0.1.2"
description = "Retrieve a RSS feed given an URL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "furl>=2.1.3",
    "httpx>=0.28.1",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "inline-snapshot>=0.19.3",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.3",
    "twine>=6.1.0",
    "types-beautifulsoup4>=4.12.0.20241020",
]


[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
